KUDU-2085. Fix crash when seeking past end of prefix-encoded blocks

This fixes a bug when seeking past the last element of a prefix-encoded
binary block. In very specific circumstances, described in the JIRA,
this would cause a Status::Corruption() to be returned.

Prior to the fix, the updated test would fail pretty reliably when
looped 50-100 times. With the patch, I looped it 1000 times with no
failure.

Change-Id: I1670b2244d586e4920f0603c48f65ed993a3b12b
Reviewed-on: http://gerrit.cloudera.org:8080/7545
Tested-by: Kudu Jenkins
Reviewed-by: David Ribeiro Alves <davidralves@gmail.com>
Reviewed-by: Andrew Wong <awong@cloudera.com>
(cherry picked from commit d1f53cc323d5d07e79304765fe171f535c1d548a)
Reviewed-on: http://gerrit.cloudera.org:8080/7612
Reviewed-by: Jean-Daniel Cryans <jdcryans@apache.org>