src/kudu/cfile/encoding-test.cc
@@ -37,6 +37,7 @@
 #include "kudu/util/hexdump.h"
 #include "kudu/util/memory/arena.h"
 #include "kudu/util/random.h"
+#include "kudu/util/random_util.h"
 #include "kudu/util/stopwatch.h"
 #include "kudu/util/test_macros.h"
 #include "kudu/util/test_util.h"
@@ -70,8 +71,7 @@ class TestEncoding : public KuduTest {
     ASSERT_EQ(1, n);
   }
 
-  // Insert a given number of strings into the provided
-  // BinaryPrefixBlockBuilder.
+  // Insert a given number of strings into the provided BlockBuilder.
   template<class BuilderType>
   static Slice CreateBinaryBlock(BuilderType *sbb,
                                  int num_items,
@@ -234,12 +234,39 @@ class TestEncoding : public KuduTest {
     }
   }
 
+  // Create a printf-style format string of the form 'XXXXXXXX%d' where the 'X' characters
+  // are random bytes (not including '%', possibly including non-printable characters).
+  static string RandomFormatString(Random* r) {
+    char buf[8];
+    RandomString(buf, arraysize(buf), r);
+    string format_string(buf, arraysize(buf));
+    for (int i = 0; i < format_string.size(); i++) {
+      if (format_string[i] == '%') {
+        format_string[i] = 'x';
+      }
+    }
+    return format_string + "%d";
+  }
+
   template<class BuilderType, class DecoderType>
   void TestBinaryBlockRoundTrip() {
     gscoped_ptr<WriterOptions> opts(NewWriterOptions());
     BuilderType sbb(opts.get());
-    const uint kCount = 10;
-    Slice s = CreateBinaryBlock(&sbb, kCount, "hello %d");
+
+    // Generate a random format string which uses some binary data.
+    // Using random data helps the ability to trigger bugs like KUDU-2085.
+    Random r(SeedRandom());
+    const string& format_string = RandomFormatString(&r);
+    const auto& GenTestString = [&](int x) {
+      return StringPrintf(format_string.c_str(), x);
+    };
+
+    // Use a random number of elements. This is necessary to trigger bugs
+    // like KUDU-2085 that only occur in specific cases such as when
+    // the number of elements is a multiple of the 'restart interval'
+    // in prefix-encoded blocks.
+    const uint kCount = r.Uniform(1000);
+    Slice s = CreateBinaryBlock(&sbb, kCount, format_string.c_str());
 
     LOG(INFO) << "Block: " << HexDump(s);
 
@@ -249,9 +276,9 @@ class TestEncoding : public KuduTest {
     // Check first/last keys
     Slice key;
     ASSERT_OK(sbb.GetFirstKey(&key));
-    ASSERT_EQ("hello 0", key);
+    ASSERT_EQ(GenTestString(0), key);
     ASSERT_OK(sbb.GetLastKey(&key));
-    ASSERT_EQ(StringPrintf("hello %d", kCount - 1), key);
+    ASSERT_EQ(GenTestString(kCount - 1), key);
 
     DecoderType sbd(s);
     ASSERT_OK(sbd.ParseHeader());
@@ -266,7 +293,7 @@ class TestEncoding : public KuduTest {
       ASSERT_TRUE(sbd.HasNext()) << "Failed on iter " << i;
       Slice s;
       CopyOne<STRING>(&sbd, &s);
-      string expected = StringPrintf("hello %d", i);
+      string expected = GenTestString(i);
       ASSERT_EQ(expected, s.ToString()) << "failed at iter " << i;
     }
     ASSERT_FALSE(sbd.HasNext());
@@ -276,6 +303,11 @@ class TestEncoding : public KuduTest {
       sbd.SeekToPositionInBlock(i);
       ASSERT_EQ(i, sbd.GetCurrentIndex());
     }
+
+    // Test the special case of seeking to the end of the block.
+    sbd.SeekToPositionInBlock(kCount);
+    ASSERT_EQ(kCount, sbd.GetCurrentIndex());
+    ASSERT_FALSE(sbd.HasNext());
 
     // Try to request a bunch of data in one go
     ScopedColumnBlock<STRING> cb(kCount + 10);
@@ -287,7 +319,7 @@ class TestEncoding : public KuduTest {
     ASSERT_FALSE(sbd.HasNext());
 
     for (uint i = 0; i < kCount; i++) {
-      string expected = StringPrintf("hello %d", i);
+      string expected = GenTestString(i);
       ASSERT_EQ(expected, cb[i].ToString());
     }
   }
